<?xml version="1.0"?>
<package format="3">
  <name>septentrio_gnss_driver</name>
  <version>1.4.0</version>
  <description>ROSaic: C++ driver for Septentrio's GNSS and INS receivers</description>

  <!-- Maintainers -->
  <maintainer email="tibor.doeme@alumni.ethz.ch">Tibor Dome</maintainer>
  <maintainer email="thomas.emter@iosb.fraunhofer.de">Thomas Emter</maintainer>
  <maintainer email="githubuser@septentrio.com">Septentrio</maintainer>


  <!-- License -->
  <license>BSD 3-Clause License</license>


  <!-- Websites -->
  <url type="website">https://github.com/septentrio-gnss/septentrio_gnss_driver</url>
  <url type="website">https://www.ros.org/wiki/septentrio_gnss_driver</url>

  <!-- Authors -->
  <author>Tibor Dome</author>
  <author>Thomas Emter</author>

  <!-- Dependencies-->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>diagnostic_msgs</depend>
  <depend>nmea_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gps_common</depend>
  <depend>nav_msgs</depend>
  <depend>boost</depend>
  <depend>libpcap</depend>  
  <depend>geographiclib</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
